# MovingAverageProject

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp  moving_average.h  random_generator.h
